# c-terminal-games

snake/: CMakeLists.txt
snake/include/: InputHadler.h  Snake.h
snake/src/: Main.cpp
